[tool.poetry]
name = "john mlflow"
version = "0.0.1"
description = "John MLFLOW"
authors = ["john <contact@nguyenjohnathan.com>"]
# New attributes
license = "MIT"
readme = "README.md"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7.9"
importlib-metadata = "^3.8.0"
mlflow = "^1.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:",
]
